My first Resume

--- a/Index.html
+++ b/Index.html
@@ -1,46 +1,47 @@
 <html>
+<head>
+
+
+<style>
+body{background- color: power blue;}
+h1{color:red;}
+table,tr,th{border:2px solid white;text-align:left;}
+p{color:orange;}
+</style>
+</head>
 <body>
-<form>
-<div style="background-color:pink;">
-<H1><ins><center>FORM</center> </ins>
-<label for=" ">First Name</label>
-<input type="text"><br>
-<br>
-<label for=" ">Last Name</label>
-<input type="text"><br>
-<br>
-<label for=" ">Age</label>
-<input type="Number"><br>
-<br>
-<label for=" ">Date of Birth</label>
-<input type="date"><br>
-<br>
-<label for=" ">Password</label>
-<input type="password"><br>
-<br>
-<label for=" ">E-mail</label>
-<input type="Email"<br>
-<br>
-<p>T-shirt size</p>
-<input id="s" name="T-shirt"type="checkbox">
-<label for="s">Small</label><br>
-<input id="m" name="T-shirt"type="checkbox">
-<label for="m">Medium</label><br>
-<input id="l" name="T-shirt"type="checkbox">
-<label for="l">Large</label><br>
-<label for="fav. fruit"> select your fav. fruit</label>
-<select id="fav. fruit">
-<option value="Mango">Mango</option>
-<option value="Banana">Banana</option>
-<option value="Apple">Apple</option></select><br>
-<br>
-<label for="TA">About your self</label><br>
-<textarea  id="TA" colm="30"rows="10">
-</textarea><br>
-<br>
-<center><input type="Submit">
-<input type="Reset"></center>
-</div>
-</form>
+<p>i love india</p>
+<h1> gtddgtrdyugyu </h1>
+<title>my first web page</title></head>
+<body><marquee direction "right">RESUME</marquee>
+<H1><ins><center> RESUME</center> </ins></H1>
+<h1>Name-Parveen kumar</h1>
+<H2>Father 's name-Bhagirth </h2>
+<h3>DOB-10/05/2004</h3>
+<h4>Mob.no.=8696559804</h4>
+<Address>jhunjhunu<br>
+                1P30<br>
+                CBI Nagar<br>
+                JHUNJHUNU<br>
+                 Pin Code=331028<br>
+                 </Address>
+<em><!...used for emphasizing the text...>HTML</em>
+<H1><ins><center> EDUCATION QUALIFICTION</center> </ins></H1>
+<center><table border="1">
+<col width="300"><col width="300">
+<tr>
+<th>Sr.no</th><th>Educations</th><th>Percentage of marks </th><th>Passing years</th>
+</tr>
+<th>1</th><th>10Th</th><th>68.17% </th><th>2014</th>
+</tr>
+<th>2</th><th>12Th</th><th>83.17% </th><th>2016</th>
+</tr>
+<th>3</th><th>B.sc</th><th>69.80% </th><th>2019</th>
+</tr>
+<th>4</th><th>B.A</th><th>59.20% </th><th>2022</th>
+</tr>
+<th>5</th><th>Civil Engginring</th><th>79.30% </th><th>2022</th>
+</tr>
+</table border="1">
 </body>
-</html>
+</html> 
